--- a/Solution.Presentation/Views/Post/Index.cshtml
+++ b/Solution.Presentation/Views/Post/Index.cshtml
@@ -1,4 +1,7 @@
-﻿@model IEnumerable<Solution.Domain.Entities.Post>
+﻿@using PagedList;
+
+@using PagedList.Mvc;
+@model IPagedList<Solution.Domain.Entities.Post>
 
 @{
     ViewBag.Title = "Index";
@@ -27,7 +30,7 @@
         <hr />
         <dl class="dl-horizontal">
 
-            <p >
+            <p>
                 @{string pathh = "~/Content/Uploads/user-profile.png";}
                 <img src="@Url.Content(pathh)" width="50" height="50" />
                 <b>@Html.DisplayFor(modelItem => item.UserId)</b>
@@ -38,15 +41,15 @@
                 </p>
 
                 <p style="display:none">
-                    @Html.DisplayNameFor(model => model.Content)
+                    @Html.DisplayNameFor(model => model.First().Content)
                 </p>
-                <p style="width:80%" >
+                <p style="width:80%">
                     @Html.DisplayFor(modelItem => item.Content)
                 </p>
             </div>
             <dt style="display:none">
 
-                @Html.DisplayNameFor(model => model.UrlImage)
+                @Html.DisplayNameFor(model => model.First().UrlImage)
             </dt>
 
             <div>
@@ -56,7 +59,7 @@
             </div>
 
             <dt style="display:none">
-                @Html.DisplayNameFor(Model => Model.UrlVideo)
+                @Html.DisplayNameFor(Model => Model.First().UrlVideo)
             </dt>
 
             <dd style="display:none">
@@ -64,7 +67,7 @@
             </dd>
 
             <dt style="display:none">
-                @Html.DisplayNameFor(Model => Model.PostDate)
+                @Html.DisplayNameFor(Model => Model.First().PostDate)
             </dt>
 
             <p style="float:right;margin-right:20px;margin-bottom:20px;margin-top:10px">
@@ -72,7 +75,7 @@
             </p>
 
             <dt style="display:none">
-                @Html.DisplayNameFor(Model => Model.NbrLikes)
+                @Html.DisplayNameFor(Model => Model.First().NbrLikes)
             </dt>
 
             <p style="margin-top:10px">
@@ -87,5 +90,11 @@
 
         </dl>
     </div>
-    
-                    }
+
+}
+<div style="margin-left:45%;margin-top:20px">
+@Html.PagedListPager(Model, pageNumber => Url.Action("Index", new
+{
+pageNumber
+}))
+</div>
