--- a/Solution.Presentation/Views/Comment/Delete.cshtml
+++ b/Solution.Presentation/Views/Comment/Delete.cshtml
@@ -4,52 +4,23 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Comment</h4>
+<h3 style="margin-left:30%">Are you sure you want to delete this Comment?</h3>
+<div style="width:30%;margin-left:40%">
+    
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.UserId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.UserId)
-        </dd>
+        
 
         <dt>
             @Html.DisplayNameFor(model => model.Content)
         </dt>
 
-        <dd>
+        <dd >
             @Html.DisplayFor(model => model.Content)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CommentDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.CommentDate)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.NbrLikes)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.NbrLikes)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.PostId)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.PostId)
-        </dd>
+        
 
     </dl>
 
