--- a/Solution.Presentation/Views/Comment/Edit.cshtml
+++ b/Solution.Presentation/Views/Comment/Edit.cshtml
@@ -4,15 +4,14 @@
     ViewBag.Title = "Edit";
 }
 
-<h2>Edit</h2>
 
 
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
     
-    <div class="form-horizontal">
-        <h4>CommentVM</h4>
+    <div class="form-horizontal" style="width:40%;margin-left:30%">
+        <h4>Edit Comment</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
         
@@ -39,8 +38,8 @@
     </div>
 }
 
-<div>
-    @Html.ActionLink("Back to List", "Index")
+<div style="float:right">
+    @Html.ActionLink("Back to News Feed", "Index")
 </div>
 
 @section Scripts {
