--- a/Solution.Presentation/Views/Post/Create.cshtml
+++ b/Solution.Presentation/Views/Post/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create</h2>
+
 
 
 
@@ -13,8 +13,8 @@
 {
     @Html.AntiForgeryToken()
 
-    <div class="form-horizontal">
-        <h4>PostVM</h4>
+    <div class="form-horizontal" style="width:40%;margin-left:30%">
+        <h4>Add a new post</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
@@ -36,14 +36,15 @@
         </div>
 
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.UrlImage)
+        <div class="form-group">
+            <b>Add Image</b>
+            <div class="editor-field" style="margin-left:150px">
+                
+                @Html.TextBox("file", "", new { type = "file" })
+                @Html.ValidationMessageFor(model => model.UrlImage)
+            </div>
         </div>
-        <div class="editor-field">
-            Upload a file
-            @Html.TextBox("file", "", new { type = "file" })
-            @Html.ValidationMessageFor(model => model.UrlImage)
-        </div>
+        
 
         
         
@@ -57,7 +58,7 @@
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Return to News Feed", "Index")
 </div>
 
 @section Scripts {
