--- a/Solution.Presentation/Views/Shared/_Layout.cshtml
+++ b/Solution.Presentation/Views/Shared/_Layout.cshtml
@@ -61,6 +61,7 @@
                         <ul class="sf-menu">
                             <li class="active"><a href="index.html"><i class="fa  fa-home"></i></a></li>
                             <li> <a href="listing-filter.html">Professionals</a> </li>
+                            <li> <a href="~/Post/index">Posts</a> </li>
                             <li>
                                 <a href="index.html">Pages</a>
                                 <ul>
@@ -171,7 +172,7 @@
     </div>
 
     <!-- Scripts -->
-    <script src=@Url.Content("https://maps.googleapis.com/maps/api/js")></script>
+    <script src=@Url.Content("~/Content/https://maps.googleapis.com/maps/api/js")></script>
     <script src=@Url.Content("~/Content/js/jquery-2.1.3.min.js")></script>
     <script src=@Url.Content("~/Content/js/bootstrap.js")></script>
     <script src=@Url.Content("~/Content/js/plugins/superfish.min.js")></script>
@@ -184,6 +185,7 @@
     <script src=@Url.Content("~/Content/js/owl.carousel.min.js")></script>
     <script src=@Url.Content("~/Content/js/gmap3.min.js")></script>
     <script src=@Url.Content("~/Content/js/scripts.js")></script>
+    <script src=@Url.Content("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css")></script>
     <script>
 
     </script>
